<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="title_activity_crime">CrimeActivity</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crimes_title">Crimes</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="take">screenshot</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
 The crime was discovered on %2$s. %3$s, and %4$s
 </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="auth">Войти</string>
    <string name="new_user">новый пользователь</string>
    <string name="ok">OK</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="file_error">error create file</string>
    <string name="crime_details_hint">Enter details of the crime</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="show_comment">show_comment</string>
    <string name="time_of_comments">time of comments</string>
    <string name="author_name">author name</string>
    <string name="message">message of comment</string>
    <string name="author_image">author image</string>
    <string name="send_comment">send comment</string>
</resources>
