<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">
        <EditText
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/new_user"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />
            <TextView

                android:layout_weight="8"
                android:text="@string/new_user"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <Button
            android:text="@string/auth"
            android:id="@+id/auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>