<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:contentDescription="@string/author_image"
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_account_circle" />
        </FrameLayout>


        <TextView
            android:text="@string/app_name"
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80" />
    </LinearLayout>

    <EditText

        android:hint="@string/message"
        android:inputType="text"
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_comment" />
</LinearLayout>